# Kinect-Pair-Images-ROS

src/guardar_imagenes/: CMakeLists.txt  guardar_imagenes.cpp  package.xml
src/guardar_imagenes/launch/: get_image.launch
